--- a/styles/index.css
+++ b/styles/index.css
@@ -16,7 +16,8 @@ main .shop {
     padding: 120px 0;
 }
 main .shop .shop_container {
-    width: 1440px;
+    max-width: 1440px;
+    min-width: 320px;
     margin: 0 auto;
 }
 main .shop .shop_container .slide_wrap{
