--- a/styles/index.css
+++ b/styles/index.css
@@ -1,13 +1,14 @@
 main {}
 /* 첫번째 section */
 main .main_title {
-    width: 100%; 
-    position: relative;
-    background: #FDFBF4;
-}
-main .main_title iframe {
     width: 100%;
     height: 100vh;
+    position: relative;
+    background: #FDFBF4;
+    overflow: hidden;
+}
+main .main_title video {
+    width: 100%;
     position: relative;
 }
 /* 두번째 section */
