--- a/styles/index.css
+++ b/styles/index.css
@@ -302,21 +302,19 @@ main .set .set_slide .swiper-button-next{
     left: auto; right: 132px; bottom: 286px; top: auto;
     transform: scaleX(-1);
 }
-main .set .set_slide .swiper-button-prev:hover {
-    filter: brightness(0);
-}
+main .set .set_slide .swiper-button-prev:hover,
 main .set .set_slide .swiper-button-next:hover {
     filter: brightness(0);
 }
 /* 네번째 section */
 main .journal {
     background: #FDFBF4;
-    padding: 120px 0;
+    padding: 120px 0 0;
 }
 main .journal .journal_wrap{}
 main .journal .journal_wrap .journal_filter{
     width: max-content;
-    margin: 120px auto;
+    margin: 0 auto 120px;
     display: flex; gap: 40px;
 }
 main .journal .journal_wrap .journal_filter li{}
@@ -330,6 +328,8 @@ main .journal .journal_wrap .journal_filter li.journal_act a{
 main .journal .journal_wrap .journal_contents{}
 main .journal .journal_wrap .journal_contents .journal_img{
     width: 55.6%;
+    overflow: visible;
+    position: relative;
 }
 main .journal .journal_wrap .journal_contents .journal_img .swiper-wrapper{}
 main .journal .journal_wrap .journal_contents .journal_img .swiper-wrapper .swiper-slide{
@@ -360,15 +360,20 @@ main .journal .journal_wrap .journal_contents .journal_img .swiper-wrapper .swip
     padding: 10.5px 15px;
 }
 main .journal .journal_wrap .journal_contents .journal_img .swiper-button-prev{
-    border: 1px solid red;
     width: 50px; height: 50px;
     background: url(../images/icon_50_arrow.png) center / cover;
-    transform: scaleX(-1);
+    transform: scaleX(-1) translateX(80px);
+    filter: invert(0.6);
 }
 main .journal .journal_wrap .journal_contents .journal_img .swiper-button-next{
-    border: 1px solid red;
     width: 50px; height: 50px;
     background: url(../images/icon_50_arrow.png) center / cover;
+    left: 416px;
+    filter: invert(0.6);
+}
+main .journal .journal_wrap .journal_contents .journal_img .swiper-button-prev:hover,
+main .journal .journal_wrap .journal_contents .journal_img .swiper-button-next:hover {
+    filter: invert(0);
 }
 
 /* 다섯번째 section */
