--- a/styles/index.css
+++ b/styles/index.css
@@ -67,6 +67,7 @@ main .shop .shop_container .slide_wrap .filter{
 /* class 끝 */
 main .shop .shop_container .slide_wrap .filter li{
     margin-bottom: 12px;
+    height: 22px;
 }
 main .shop .shop_container .slide_wrap .filter li:last-child {
     margin-bottom: 0;
@@ -313,7 +314,7 @@ main .journal {
 }
 main .journal .journal_wrap{}
 main .journal .journal_wrap .journal_filter{
-    width: max-content;
+    width: max-content; height: 24px;
     margin: 0 auto 120px;
     display: flex; gap: 40px;
 }
@@ -534,7 +535,7 @@ main .index .index_wrap {
     background: linear-gradient(rgba(0,0,0,0.34), rgba(0,0,0,0.34)), url(../images/index/img_index001.jpg) center / cover;
 }
 main .index .index_wrap .index_filter {
-    width: max-content;
+    width: max-content; height: 24px;
     margin: 0 auto;
     display: flex; gap: 40px;
 }
