--- a/styles/index.css
+++ b/styles/index.css
@@ -453,10 +453,12 @@ main .wall_paper .paper_wrap .paper .back .down_wrap p{
 }
 /* 여섯번째 section */
 main .store {
+    height: 120vh;
     background: #FDFBF4;
     padding: 120px 0;
     position: relative;
     z-index: 1;
+    overflow: hidden;
 }
 main .store >p {
     position: absolute;
@@ -466,11 +468,10 @@ main .store >p {
 }
 main .store .store_wrap {}
 main .store_wrap .store_container {
-    overflow: hidden;
     width: 100%;
 }
 main .store_wrap .store_container .list {
-    position: sticky; margin-left: 80px; top: 200px;
+    position: relative; margin-left: 80px; top: 240px;
 }
 main .store_wrap .store_container .list .store_list {
     margin-bottom: 80px;
@@ -486,6 +487,9 @@ main .store_wrap .store_container .list .store_list p a {
     font-size: 1.875rem; font-weight: 600;
     margin-left: 20px;
 }
+main .store_wrap .store_container .list .store_list p a:hover {
+    color: #aaa;
+}
 main .store_wrap .store_container .list .coffee_list {}
 main .store_wrap .store_container .list .coffee_list h3 {
     font-size: 1.125rem; font-weight: 600;
@@ -497,6 +501,9 @@ main .store_wrap .store_container .list .coffee_list p a:first-child {
 main .store_wrap .store_container .list .coffee_list p a {
     font-size: 1.875rem; font-weight: 600;
     margin-left: 20px;
+}
+main .store_wrap .store_container .list .coffee_list p a:hover {
+    color: #aaa;
 }
 main .store_wrap .store_container .store_pic_wrap{
     width: 70%;
@@ -511,6 +518,9 @@ main .store_wrap .store_container .store_pic_wrap .store_gnb a{
     font-family: 'SunBatang-Light';
     display: flex; align-items: center;
 }
+main .store_wrap .store_container .store_pic_wrap .store_gnb a:hover{
+    text-decoration: underline;
+}
 main .store_wrap .store_container .store_pic_wrap .store_gnb a:last-child::after {
     display: none;
 }
@@ -520,13 +530,50 @@ main .store_wrap .store_container .store_pic_wrap .store_gnb a::after {
     background: #000;
     margin: 0 10px;
 }
-main .store_wrap .store_container .store_pic_wrap .store_gnb a.current{}
-main .store_wrap .store_container .store_pic_wrap .store_pic{
-    width: 50%; height: 100%;
-    float: right;
-    background: orange;
+main .store_wrap .store_container .store_pic_wrap .store_gnb a.current{
+    font-family: 'SunBatang-Medium';
+    font-size: 2rem;
 }
-main .store_wrap .more_store{}
+main .store_wrap .store_container .store_pic_wrap .store_pic{
+    width: 60%; height: 80vh;
+    position: absolute;
+    display: flex; gap: 50px;
+    top: 140px; right: 80px;
+    overflow: auto;
+}
+main .store_wrap .store_container .store_pic_wrap .store_pic::-webkit-scrollbar{
+    display: none;
+}
+main .store_wrap .store_container .store_pic_wrap .store_pic .left_pic{
+    width: 578px;
+    position: relative;
+    top: 240px;
+}
+main .store_wrap .store_container .store_pic_wrap .store_pic .left_pic img{
+    width: 100%;
+    margin-bottom: 50px;
+}
+main .store_wrap .store_container .store_pic_wrap .store_pic .left_pic img:last-child{
+    margin-bottom: 0;
+}
+main .store_wrap .store_container .store_pic_wrap .store_pic .right_pic{
+    width: 578px;
+}
+main .store_wrap .store_container .store_pic_wrap .store_pic .right_pic img{
+    width: 100%;
+    margin-bottom: 50px;
+}
+main .store_wrap .store_container .store_pic_wrap .store_pic .right_pic img:last-child{
+    margin-bottom: 0;
+}
+main .store_wrap .more_store{
+    width: 60px; height: 60px;
+    position: absolute; bottom: 80px; left: 50%;
+}
+main .store_wrap .more_store img{
+    filter: invert(1);
+    width: 100%;
+}
 /* 일곱번째 section */
 main .index {}
 main .index .index_wrap {
